using RootDomainObject specific calls instead of ObjectFenixOJB.readByOID